# csdl2

./: .astylerc  .gitignore  CMakeLists.txt
CSDL2/: csdl2.sln  csdl2.vcxproj  csdl2.vcxproj.filters
include/: csdl2.hxx
include/csdl2/: Color.hxx  Freeable.hxx  Handle.hxx  Point.hxx  Rect.hxx  Renderer.hxx  SDL.hxx  Size.hxx  Surface.hxx  Window.hxx  csdl2_internal.h
src/: CMakeLists.txt  Color.cpp  Point.cpp  Rect.cpp  Renderer.cpp  SDL.cpp  Size.cpp  Surface.cpp  Window.cpp
